--- a/views/main.ejs
+++ b/views/main.ejs
@@ -16,14 +16,13 @@
 
 
   <P>¿Empezamos?</P>
-
-  <div class="container-btn-lets-go">
-    <a href="/settings" class="btn-lets-go">
-      <button class="cssbuttons-io-button"> ¡VAMOS!
-        <div class="icon">
-          <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path>
+  <div class="container-btn-comenzar">
+    <a class="a-btn-comenzar">
+      <button class="btn-comenzar">¡VAMOS!
+        <div class="icon-comenzar">
+          <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="svg-comenzar">
+            <path class="path-btn-comenzar" d="M0 0h24v24H0z" fill="none"></path>
+            <path class="path-btn-comenzar" d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path>
           </svg>
         </div>
       </button>
