--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -7,8 +7,8 @@
 
   <div class="container-elements-body-pannel">
     <div class="container-saludo-pannel">
-      <p class="primera-linea-saludo-pannel">¡Hola <%= user.nickName %>!</p>
-      <p class="segunda-linea-saludo-pannel">¿Que operación querés registrar?</p>
+      <h3 class="primera-linea-saludo-pannel">¡Hola <%= user.nickName %>!</h3>
+      <h5 class="segunda-linea-saludo-pannel">¿Que operación querés registrar?</h5>
     </div>
 
     <div class="container-add-ingreso-pannel">
