--- a/views/reSettings.ejs
+++ b/views/reSettings.ejs
@@ -13,7 +13,7 @@
   </div>
   <!--  -->
 
-  <h3 class="budget-ask">Modificación del presupuesto</h3>
+  <h3>Modificación del presupuesto</h3>
 
   <% if (settings.length !== 0) { %>
   <div class="container-gral-table">
