Corrección de martin-top del btn avanzar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,6 +152,7 @@ gap: 10px;
 .container-btn-avanzar,
 .container-btn-comenzar {
   margin: 0 auto;
+  margin-top: 15px;
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
