--- a/views/fragments/navbar.ejs
+++ b/views/fragments/navbar.ejs
@@ -48,6 +48,8 @@
                     </div>
                   </a>
                 </li>
+                <hr>
+                <li><a type="button" class="dropdown-item custom-link-navbar" data-bs-toggle="modal" data-bs-target="#modalAbout">Acerca de</a></li>
               </ul>
             </li>
           </ul>
@@ -55,3 +57,5 @@
     </div>
   </div>
 </nav>
+
+<%- include("./modal") %>
