agregado de tag metas

--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -6,6 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- og's Meta -->
+  <meta property="og:title" content="Smart Wallet" />
+  <meta property="og:description" content="¡Registrá tus ingresos y egresos en las diferentes categorías que establezcas y comenzá a mejorar en tus finanzas!" />
+  <meta property="og:url" content="https://smart-wallet-by-ramiro.herokuapp.com/">
+  <meta name="image" property="og:image" content="https://res.cloudinary.com/ramiropezzone/image/upload/v1654957017/vista-min-smart-wallet_ajqspu.png">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="600" />
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/css/style.css">
 
