corrección de eliminación del modal de edición

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -2,8 +2,16 @@
 
 <body class="body body-settings">
 
-  <!-- Modal -->
+  <!-- Modal de edición-->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content add-to-modal">
+      </div>
+    </div>
+  </div>
   <!--  -->
+
+
   <div class="container-title-y-btn-instructivo">
     <h3 class="budget-ask">¿Cómo te gustaría dividir el presupuesto?
       <button type="button" class="btn-instructivo" data-bs-toggle="modal" data-bs-target="#modalInstructivo">
@@ -11,9 +19,8 @@
       </button>
     </h3>
   </div>
-
-  <!-- Modal instructivo -->
   <%- include("./fragments/modalInstructivo") %>
+
 
   <% if (settings.length !== 0) { %>
   <div class="container-gral-table">
