--- a/views/formNvoIngreso.ejs
+++ b/views/formNvoIngreso.ejs
@@ -13,8 +13,8 @@
         <input type="hidden" class="egresosSelector">
 
         <div class="form-floating mb-3 containerNameNewMove">
-          <input type="text" name="concept" class="form-control nameInputNewMove" id="concept" placeholder="En concepto de">
-          <label for="concept">En concepto de</label>
+          <input type="text" name="concept" class="form-control nameInputNewMove" id="concept" placeholder="En concepto de (Ej: Sueldo)">
+          <label for="concept">En concepto de (Ej: Sueldo)</label>
           <div class="hidden errorMsgInputConcept">Por favor, coloca una referencia</div>
         </div>
 
