automatización de colspan de tablas de ingresos y egresos, corrección del comportamiento de tecla Escape al cancelar edición de categoría, agregado de posibilidad de editar la categoría de un egreso

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,6 +642,10 @@ h6 {
   margin-top: 25px;
   color: var(--eggplant);
 }
+.modal-header-edit-egreso {
+  display: flex !important;
+  flex-direction: column !important;
+}
 textarea {
   resize: none !important;
   height: 150px !important;
