--- a/views/ingresosDelMes.ejs
+++ b/views/ingresosDelMes.ejs
@@ -41,7 +41,7 @@
       <tbody>
         <% if (ingresos.length === 0) { %>
         <tr>
-          <td colspan="7">No se registran ingresos en este período</td>
+          <td class="noRegisteredMovements">No se registran ingresos en este período</td>
         </tr>
         <% } else { %>
         <% for( let i = 0; i < ingresos.length; i++ ) { %>
