--- a/views/egresosDelMes.ejs
+++ b/views/egresosDelMes.ejs
@@ -10,7 +10,7 @@
   <input type="hidden" value=<%= month %> id="month-hidden" />
   <% } %>
 
-  <select class="form-select egresosMonthSelector" aria-label="Selector de mes" name="monthSelector">
+  <select class="form-select egresosMonthSelector selector" aria-label="Selector de mes" name="monthSelector">
     <option value="0" class="month ene">Enero</option>
     <option value="1" class="month feb">Febrero</option>
     <option value="2" class="month mar">Marzo</option>
@@ -24,6 +24,21 @@
     <option value="10" class="month nov">Noviembre</option>
     <option value="11" class="month dic">Diciembre</option>
   </select>
+
+  <div class="container-selector-order-by">
+    <div class="title-order-by">
+      <p>Ordenar por:</p>
+    </div>
+    <select class="form-select ordenarEgresosPor selector" aria-label="Ordenar por" name="ordenarEgresosPor">
+      <option value="day" class="opcionOrdenarEgresos day">Día</option>
+      <option value="categoryName" class="opcionOrdenarEgresos categoryName">Categoría</option>
+      <option value="amount" class="opcionOrdenarEgresos amount">Monto</option>
+    </select>
+    <select class="form-select ordenarEgresosDeManera selector" aria-label="Ordenar de manera" name="ordenarEgresosDeManera">
+      <option value="asc" class="opcionOrdenarEgresosDeManera asc">Asc</option>
+      <option value="desc" class="opcionOrdenarEgresosDeManera desc">Desc</option>
+    </select>
+  </div>
 
   <div class="container-gral-table">
     <table class="table table-striped table-hover">
