--- a/views/egresosDelMes.ejs
+++ b/views/egresosDelMes.ejs
@@ -25,7 +25,7 @@
     <option value="11" class="month dic">Diciembre</option>
   </select>
 
-  <div class="container-selector-order-by">
+  <!-- <div class="container-selector-order-by">
     <div class="title-order-by">
       <p>Ordenar por:</p>
     </div>
@@ -38,7 +38,7 @@
       <option value="asc" class="opcionOrdenarEgresosDeManera asc">Asc</option>
       <option value="desc" class="opcionOrdenarEgresosDeManera desc">Desc</option>
     </select>
-  </div>
+  </div> -->
 
   <div class="container-gral-table">
     <table class="table table-striped table-hover">
