--- a/views/ingresosDelMes.ejs
+++ b/views/ingresosDelMes.ejs
@@ -9,6 +9,9 @@
   <% if (month) { %>
   <input type="hidden" value=<%= month %> id="month-hidden" />
   <% } %>
+  <% if (order) { %>
+    <input type="hidden" value=<%= order %> id="order-ingresos-hidden" />
+    <% } %>
 
   <select class="form-select ingresosMonthSelector" aria-label="Selector de mes" name="monthSelector">
     <option value="0" class="month ene">Enero</option>
@@ -24,6 +27,20 @@
     <option value="10" class="month nov">Noviembre</option>
     <option value="11" class="month dic">Diciembre</option>
   </select>
+
+  <div class="container-selector-order-by">
+    <div class="title-order-by">
+      <p>Ordenar por:</p>
+    </div>
+    <select class="form-select ordenarIngresosPor selector" aria-label="Ordenar por" name="ordenarIngresosPor">
+      <option value="day-desc" class="opcionOrdenarIngresos day-desc">Día - Desc (↓)</option>
+      <option value="day-asc" class="opcionOrdenarIngresos day-asc">Día - Asc (↑)</option>
+      <option value="concept-desc" class="opcionOrdenarIngresos concept-desc">Concepto - Desc (↓)</option>
+      <option value="concept-asc" class="opcionOrdenarIngresos concept-asc">Concepto - Asc (↑)</option>
+      <option value="amount-desc" class="opcionOrdenarIngresos amount-desc">Monto - Desc (↓)</option>
+      <option value="amount-asc" class="opcionOrdenarIngresos amount-asc">Monto - Asc (↑)</option>
+    </select>
+  </div>
 
   <div class="container-gral-table">
     <table class="table table-striped table-hover">
@@ -51,16 +68,18 @@
           <td><%= ingresos[i].concept %></td>
           <td><%= ingresos[i].value %></td>
           <% if (ingresos[i].obs === "") { %>
-          <td>-</th>
+          <td>-</td>
             <% } else {%>
           <td><%= ingresos[i].obs %></td>
           <% } %>
-          <td><span id="btnEditarIngreso" onclick="editarIngreso('<%= ingresos[i]._id %>', '<%= ingresos[i].concept %>', '<%= ingresos[i].value %>', '<%= ingresos[i].obs %>')" data-bs-toggle="modal" data-bs-target="#edit-ingreso" class="btn-mini-table">
+          <td>
+            <span id="btnEditarIngreso" onclick="editarIngreso('<%= ingresos[i]._id %>', '<%= ingresos[i].concept %>', '<%= ingresos[i].value %>', '<%= ingresos[i].obs %>')" data-bs-toggle="modal" data-bs-target="#edit-ingreso" class="btn-mini-table">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                 <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                 <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
               </svg>
-            </span></td>
+            </span>
+          </td>
           <td onclick="eliminarIngreso('<%= ingresos[i]._id %>', '<%= ingresos[i].concept %>')" class="btnEliminarIngreso">
             <a class="btn-mini-table btn-quitar-cat">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
