cambio de color de fuentes al estar inhabilitado el selector de orden

--- a/views/ingresosDelMes.ejs
+++ b/views/ingresosDelMes.ejs
@@ -30,7 +30,7 @@
 
   <div class="container-selector-order-by">
     <div class="title-order-by">
-      <p>Ordenar por:</p>
+      <p  class="p-order-by">Ordenar por:</p>
     </div>
     <select class="form-select ordenarIngresosPor orderSelector" aria-label="Ordenar por" name="ordenarIngresosPor">
       <option value="day-desc" class="opcionOrdenarIngresos day-desc">Día - Desc (↓)</option>
