--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,15 +21,15 @@
 /* From uiverse.io by @e-coders */
 @keyframes ldio-4j5ay0xf86g {
   0% {
-   opacity: 1
+    opacity: 1;
   }
- 
+
   100% {
-   opacity: 0
+    opacity: 0;
   }
- }
- 
- .ldio-4j5ay0xf86g div {
+}
+
+.ldio-4j5ay0xf86g div {
   left: 94px;
   top: 48px;
   position: absolute;
@@ -39,88 +39,88 @@
   height: 24px;
   border-radius: 6px / 12px;
   transform-origin: 6px 52px;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(1) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -0.9166666666666666s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(2) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(2) {
   transform: rotate(30deg);
   animation-delay: -0.8333333333333334s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(3) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.75s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(4) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.6666666666666666s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(5) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.5833333333333334s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(6) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.5s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(7) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.4166666666666667s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(8) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.3333333333333333s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(9) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.25s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(10) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.16666666666666666s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(11) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.08333333333333333s;
   background: #fe718d;
- }
- 
- .ldio-4j5ay0xf86g div:nth-child(12) {
+}
+
+.ldio-4j5ay0xf86g div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
   background: #fe718d;
- }
- 
- .loadingio-spinner-spinner-977el9wwy2v {
+}
+
+.loadingio-spinner-spinner-977el9wwy2v {
   width: 200px;
   height: 200px;
   display: inline-block;
   overflow: hidden;
- }
- 
- .ldio-4j5ay0xf86g {
+}
+
+.ldio-4j5ay0xf86g {
   width: 100%;
   height: 100%;
   position: relative;
@@ -128,11 +128,11 @@
   backface-visibility: hidden;
   transform-origin: 0 0;
   /* see note above */
- }
- 
- .ldio-4j5ay0xf86g div {
+}
+
+.ldio-4j5ay0xf86g div {
   box-sizing: content-box;
- }
+}
 /* Fin styles del loader */
 
 * {
@@ -874,4 +874,7 @@ textarea {
     position: absolute !important;
     left: -110px !important;
   }
+}
+.orderSelector:disabled {
+  color: var(--gray-2);
 }
