--- a/views/egresosDelMes.ejs
+++ b/views/egresosDelMes.ejs
@@ -30,7 +30,7 @@
 
   <div class="container-selector-order-by">
     <div class="title-order-by">
-      <p>Ordenar por:</p>
+      <p class="p-order-by">Ordenar por:</p>
     </div>
     <select class="form-select ordenarEgresosPor orderSelector" aria-label="Ordenar por" name="ordenarEgresosPor">
       <option value="day-desc" class="opcionOrdenarEgresos day-desc">Día - Desc (↓)</option>
